inserir imagem fundo e estilizar #categoria

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <option value="pc">Computador</option>
                     <option value="sp">Smartphone</option>
                 </select>
-                <label for="check-generos">Quais os seus gêneros preferidos?</label>
+                <label for="genero">Quais os seus gêneros preferidos?</label>
                 <div id="genero">
                     <label for="acao"><input name="acao" type="checkbox">Ação</label>
                     <label for="aventura"><input name="aventura" type="checkbox">Aventura</label>
@@ -59,44 +59,44 @@
                         <label class="block" for="m">Multiplayer:</label>
                         <label class="block" for="d">Diversão:</label>
                     </div>
-                    <div class='categoria'  id="historia">
-                        <label><input type="radio" name="h">3</label>
-                        <label><input type="radio" name="h">2</label>
-                        <label><input type="radio" name="h">1</label>
-                        <label><input type="radio" name="h">0</label>
-                    </div>
-                    <div class="categoria" id="graficos">
-                        <label><input type="radio" name="g">3</label>
-                        <label><input type="radio" name="g">2</label>
-                        <label><input type="radio" name="g">1</label>
-                        <label><input type="radio" name="g">0</label>
-                    </div>
-                    <div class="categoria" id="jogabilidade">
-                        <label><input type="radio" name="j">3</label>
-                        <label><input type="radio" name="j">2</label>
-                        <label><input type="radio" name="j">1</label>
-                        <label><input type="radio" name="j">0</label>
-                    </div>
-                    <div class="categoria" id="multiplayer">
-                        <label><input type="radio" name="m">3</label>
-                        <label><input type="radio" name="m">2</label>
-                        <label><input type="radio" name="m">1</label>
-                        <label><input type="radio" name="m">0</label>
-                    </div>
-                    <div class="categoria" id="diversao">
-                        <label><input type="radio" name="d">3</label>
-                        <label><input type="radio" name="d">2</label>
-                        <label><input type="radio" name="d">1</label>
-                        <label><input type="radio" name="d">0</label>
+                    <div>
+                        <div class='categoria'  id="historia">
+                            <label><input type="radio" name="h">3</label>
+                            <label><input type="radio" name="h">2</label>
+                            <label><input type="radio" name="h">1</label>
+                            <label><input type="radio" name="h">0</label>
+                        </div>
+                        <div class="categoria" id="graficos">
+                            <label><input type="radio" name="g">3</label>
+                            <label><input type="radio" name="g">2</label>
+                            <label><input type="radio" name="g">1</label>
+                            <label><input type="radio" name="g">0</label>
+                        </div>
+                        <div class="categoria" id="jogabilidade">
+                            <label><input type="radio" name="j">3</label>
+                            <label><input type="radio" name="j">2</label>
+                            <label><input type="radio" name="j">1</label>
+                            <label><input type="radio" name="j">0</label>
+                        </div>
+                        <div class="categoria" id="multiplayer">
+                            <label><input type="radio" name="m">3</label>
+                            <label><input type="radio" name="m">2</label>
+                            <label><input type="radio" name="m">1</label>
+                            <label><input type="radio" name="m">0</label>
+                        </div>
+                        <div class="categoria" id="diversao">
+                            <label><input type="radio" name="d">3</label>
+                            <label><input type="radio" name="d">2</label>
+                            <label><input type="radio" name="d">1</label>
+                            <label><input type="radio" name="d">0</label>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-<div> 
-        <button type="submit">Enviar Resposta</button>
-    </div>
-         </section>
-     </form>
+            <div> 
+                <button type="submit">Enviar Resposta</button>
+            </div>
+        </section>
+    </form>
 </body>
 </html>
